--- a/src/main/resources/view/manager/PlaneTableView.fxml
+++ b/src/main/resources/view/manager/PlaneTableView.fxml
@@ -5,9 +5,16 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.PlaneTableViewController">
    <children>
+      <Label layoutX="14.0" layoutY="14.0" text="Фільтр таблиці:">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="filterField" layoutX="127.0" layoutY="12.0" prefHeight="25.0" prefWidth="473.0" />
+      <Button layoutX="18.0" layoutY="388.0" mnemonicParsing="false" onAction="#updateData" text="Оновити дані" AnchorPane.bottomAnchor="14.0" />
+      <Button layoutX="537.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleOk" text="Вийти" AnchorPane.bottomAnchor="14.0" />
       <TableView fx:id="planeTableView" layoutX="1.0" layoutY="47.0" prefHeight="333.0" prefWidth="600.0" AnchorPane.bottomAnchor="47.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="47.0">
         <columns>
           <TableColumn fx:id="nameColumn" prefWidth="102.0" text="Назва" />
@@ -19,12 +26,5 @@
             <TableColumn fx:id="ownerColumn" prefWidth="125.0" text="Власник" />
         </columns>
       </TableView>
-      <Button layoutX="276.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleOk" text="Вийти" AnchorPane.bottomAnchor="14.0" />
-      <Label layoutX="14.0" layoutY="14.0" text="Фільтр таблиці:">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="filterField" layoutX="127.0" layoutY="12.0" prefHeight="25.0" prefWidth="473.0" />
    </children>
 </AnchorPane>
