--- a/src/main/resources/view/manager/PrimaryTaskTableView.fxml
+++ b/src/main/resources/view/manager/PrimaryTaskTableView.fxml
@@ -7,27 +7,28 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="406.0" prefWidth="837.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.PrimaryTaskTableViewController">
    <children>
-      <TableView fx:id="primaryTaskTable" layoutY="29.0" prefHeight="371.0" prefWidth="447.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="29.0">
-        <columns>
-          <TableColumn fx:id="nameColumn" prefWidth="109.0" text="Назва" />
-            <TableColumn fx:id="costColumn" prefWidth="70.0" text="Оплата" />
-            <TableColumn fx:id="timeToCompleteColumn" prefWidth="99.0" text="Час виконання" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="168.0" text="Опис" />
-        </columns>
-      </TableView>
+      <TextField fx:id="filterField" layoutX="124.0" layoutY="2.0" prefHeight="25.0" prefWidth="322.0" />
       <Button layoutX="468.0" layoutY="367.0" mnemonicParsing="false" onAction="#handleAdd" text="Додати" AnchorPane.bottomAnchor="14.0" />
-      <Button layoutX="837.0" layoutY="367.0" mnemonicParsing="false" onAction="#handleExit" text="Закрити" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="8.0" />
+      <Button layoutX="604.0" layoutY="367.0" mnemonicParsing="false" onAction="#updateData" text="Оновити дані" AnchorPane.bottomAnchor="14.0" />
+      <Button layoutX="769.0" layoutY="367.0" mnemonicParsing="false" onAction="#handleExit" text="Закрити" AnchorPane.bottomAnchor="14.0" />
       <Label layoutX="621.0" layoutY="4.0" prefHeight="20.0" prefWidth="56.0" text="Опис:" AnchorPane.topAnchor="4.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
       <TextArea fx:id="descriptionTextArea" layoutX="468.0" layoutY="34.0" prefHeight="318.0" prefWidth="416.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="468.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="34.0" />
+      <TableView fx:id="primaryTaskTable" layoutY="29.0" prefHeight="371.0" prefWidth="447.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="29.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" prefWidth="109.0" resizable="false" text="Назва" />
+            <TableColumn fx:id="costColumn" prefWidth="70.0" resizable="false" text="Оплата" />
+            <TableColumn fx:id="timeToCompleteColumn" prefWidth="99.0" resizable="false" text="Час виконання" />
+            <TableColumn fx:id="descriptionColumn" prefWidth="168.0" resizable="false" text="Опис" />
+        </columns>
+      </TableView>
       <Label layoutX="14.0" layoutY="6.0" text="Фільтр таблиці:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="filterField" layoutX="124.0" layoutY="2.0" prefHeight="25.0" prefWidth="322.0" />
    </children>
 </AnchorPane>
