--- a/src/main/resources/view/manager/ProblemDetails.fxml
+++ b/src/main/resources/view/manager/ProblemDetails.fxml
@@ -6,23 +6,25 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="441.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.ProblemDetailsController">
    <children>
       <TextField fx:id="filterField" layoutX="117.0" layoutY="12.0" prefHeight="25.0" prefWidth="420.0" AnchorPane.leftAnchor="117.0" AnchorPane.rightAnchor="448.0" AnchorPane.topAnchor="12.0" />
-      <Group layoutX="-386.0" layoutY="64.0" />
       <Label layoutX="14.0" layoutY="15.0" text="Фільтр таблиці:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="14.0" layoutY="369.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Нове завдання" />
-      <Button layoutX="14.0" layoutY="408.0" mnemonicParsing="false" text="Вибрати завдання" />
-      <Button layoutX="149.0" layoutY="369.0" mnemonicParsing="false" text="Запити у відділ кадрів" />
-      <Button layoutX="149.0" layoutY="408.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="137.0" text="Інформація про літак" />
-      <Button layoutX="305.0" layoutY="369.0" mnemonicParsing="false" text="Профіль творця" />
-      <Button layoutX="305.0" layoutY="408.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Оновити дані" />
-      <Button layoutX="434.0" layoutY="408.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Вийти" />
+      <Group AnchorPane.bottomAnchor="7.0">
+         <children>
+            <Button layoutX="14.0" layoutY="369.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Нове завдання" />
+            <Button layoutX="149.0" layoutY="369.0" mnemonicParsing="false" text="Запити у відділ кадрів" />
+            <Button layoutX="305.0" layoutY="369.0" mnemonicParsing="false" text="Профіль творця" />
+            <Button layoutX="14.0" layoutY="408.0" mnemonicParsing="false" text="Вибрати завдання" />
+            <Button layoutX="149.0" layoutY="408.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="137.0" text="Інформація про літак" />
+            <Button layoutX="305.0" layoutY="408.0" mnemonicParsing="false" onAction="#updateData" prefHeight="25.0" prefWidth="105.0" text="Оновити дані" />
+            <Button layoutX="434.0" layoutY="408.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Вийти" />
+         </children>
+      </Group>
       <TableView fx:id="taskTableView" layoutX="14.0" layoutY="44.0" prefHeight="316.0" prefWidth="512.0" AnchorPane.bottomAnchor="81.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="447.0" AnchorPane.topAnchor="44.0">
         <columns>
           <TableColumn fx:id="nameTaskColumn" prefWidth="72.0" text="Завдання" />
@@ -30,45 +32,45 @@
             <TableColumn fx:id="deadlineColumn" prefWidth="85.0" text="Закінчити до" />
             <TableColumn fx:id="priorityColumn" prefWidth="69.0" text="Пріорітет" />
             <TableColumn fx:id="amountColumn" prefWidth="65.0" text="Кількість" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="153.0" text="Додатковий опис" />
+            <TableColumn fx:id="descriptionColumn" maxWidth="141.0" prefWidth="141.0" text="Додатковий опис" />
         </columns>
       </TableView>
-      <Label layoutX="555.0" layoutY="15.0" text="Проект:">
+      <Label layoutX="555.0" layoutY="15.0" text="Проект:" AnchorPane.rightAnchor="368.0" AnchorPane.topAnchor="15.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="problemNameField" layoutX="615.0" layoutY="13.0" prefHeight="25.0" prefWidth="133.0" />
-      <Label layoutX="551.0" layoutY="53.0" text="Дедлайн:">
+      <TextField fx:id="problemNameField" layoutX="615.0" layoutY="13.0" prefHeight="25.0" prefWidth="133.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="14.0" />
+      <Label layoutX="551.0" layoutY="53.0" text="Дедлайн:" AnchorPane.rightAnchor="363.0" AnchorPane.topAnchor="53.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="752.0" layoutY="16.0" text="Створений:">
+      <Label layoutX="752.0" layoutY="16.0" text="Створений:" AnchorPane.rightAnchor="148.0" AnchorPane.topAnchor="16.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="697.0" layoutY="92.0" text="Опис проекту:">
+      <Label layoutX="697.0" layoutY="92.0" text="Опис проекту:" AnchorPane.rightAnchor="184.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="757.0" layoutY="54.0" text="Пріорітет:">
+      <Label layoutX="757.0" layoutY="54.0" text="Пріорітет:" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="54.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="createDateField" layoutX="831.0" layoutY="14.0" prefHeight="25.0" prefWidth="133.0" />
-      <TextField fx:id="deadlineField" layoutX="615.0" layoutY="51.0" prefHeight="25.0" prefWidth="133.0" />
-      <Label fx:id="priorityLabel" layoutX="831.0" layoutY="54.0" prefHeight="20.0" prefWidth="74.0" text="Priority">
+      <TextField fx:id="createDateField" layoutX="831.0" layoutY="14.0" prefHeight="25.0" prefWidth="133.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="14.0" />
+      <TextField fx:id="deadlineField" layoutX="615.0" layoutY="51.0" prefHeight="25.0" prefWidth="133.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="51.0" />
+      <Label fx:id="priorityLabel" layoutX="831.0" layoutY="54.0" prefHeight="20.0" prefWidth="74.0" text="Priority" AnchorPane.rightAnchor="68.0" AnchorPane.topAnchor="54.0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextArea fx:id="problemDescriptionTextArea" layoutX="539.0" layoutY="112.0" prefHeight="141.0" prefWidth="418.0" />
-      <TextArea fx:id="primaryTaskDescriptionTextArea" layoutX="543.0" layoutY="273.0" prefHeight="141.0" prefWidth="418.0" />
-      <Label layoutX="664.0" layoutY="253.0" text="Опис Атомарної роботи:">
+      <TextArea fx:id="problemDescriptionTextArea" layoutX="539.0" layoutY="112.0" prefHeight="141.0" prefWidth="418.0" AnchorPane.bottomAnchor="188.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="112.0" />
+      <TextArea fx:id="taskDescriptionTextArea" layoutX="539.0" layoutY="273.0" prefHeight="141.0" prefWidth="418.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="16.0" />
+      <Label layoutX="694.0" layoutY="262.0" text="Опис завдання:" AnchorPane.bottomAnchor="159.0" AnchorPane.rightAnchor="180.0">
          <font>
             <Font size="14.0" />
          </font>
