--- a/src/main/resources/view/manager/PrimaryTaskEditDialog.fxml
+++ b/src/main/resources/view/manager/PrimaryTaskEditDialog.fxml
@@ -5,12 +5,12 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.PrimaryTaskEditDialogController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="462.0" prefWidth="513.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.PrimaryTaskEditDialogController">
    <children>
-      <GridPane layoutX="15.0" layoutY="14.0" prefHeight="134.0" prefWidth="564.0">
+      <GridPane layoutX="231.0" layoutY="14.0" prefHeight="94.0" prefWidth="259.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="148.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.0" minWidth="10.0" prefWidth="416.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="138.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.0" minWidth="10.0" prefWidth="154.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
@@ -20,47 +20,44 @@
          <children>
             <Label text="Назва:">
                <font>
-                  <Font size="18.0" />
+                  <Font size="14.0" />
                </font>
             </Label>
             <Label text="Оплата:" GridPane.rowIndex="1">
                <font>
-                  <Font size="18.0" />
+                  <Font size="14.0" />
                </font>
             </Label>
             <Label text="Час виконання:" GridPane.rowIndex="2">
                <font>
-                  <Font size="18.0" />
+                  <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="nameField" prefHeight="27.0" prefWidth="408.0" GridPane.columnIndex="1">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="costField" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="timeToCompleteField" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </TextField>
+            <TextField fx:id="nameField" GridPane.columnIndex="1" />
+            <TextField fx:id="costField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="timeToCompleteField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
-      <Label layoutX="15.0" layoutY="149.0" text="Опис:">
+      <Label layoutX="350.0" layoutY="134.0" text="Опис:">
          <font>
-            <Font size="18.0" />
+            <Font size="14.0" />
          </font>
       </Label>
-      <TextArea fx:id="descriptionTextArea" layoutX="163.0" layoutY="162.0" prefHeight="161.0" prefWidth="416.0" AnchorPane.bottomAnchor="77.0" AnchorPane.leftAnchor="163.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="162.0">
+      <TextArea fx:id="descriptionTextArea" layoutX="231.0" layoutY="154.0" prefHeight="261.0" prefWidth="274.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextArea>
-      <Button layoutX="447.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleOk" text="Підтвердити" AnchorPane.bottomAnchor="17.0" AnchorPane.rightAnchor="120.0" />
-      <Button layoutX="527.0" layoutY="358.0" mnemonicParsing="false" onAction="#handleCancel" text="Відмінити" AnchorPane.bottomAnchor="17.0" AnchorPane.rightAnchor="21.0" />
+      <Button layoutX="231.0" layoutY="429.0" mnemonicParsing="false" onAction="#handleOk" text="Підтвердити" />
+      <Button layoutX="435.0" layoutY="429.0" mnemonicParsing="false" onAction="#handleCancel" text="Відмінити" />
+      <TableView fx:id="skillTableView" layoutX="14.0" layoutY="34.0" prefHeight="261.0" prefWidth="198.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" prefWidth="140.0" text="Вміння" />
+          <TableColumn fx:id="checkBoxColumn" prefWidth="59.0" text="Вибрані" />
+        </columns>
+      </TableView>
+      <TextArea fx:id="skillDescriptionTextArea" layoutX="13.0" layoutY="301.0" prefHeight="153.0" prefWidth="200.0" />
+      <Label layoutX="14.0" layoutY="6.0" text="Пошук:" />
+      <TextField fx:id="filterField" layoutX="64.0" layoutY="2.0" />
    </children>
 </AnchorPane>
