--- a/src/main/resources/view/manager/ProblemDetails.fxml
+++ b/src/main/resources/view/manager/ProblemDetails.fxml
@@ -6,74 +6,105 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="441.0" prefWidth="973.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.ProblemDetailsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="469.0" prefWidth="761.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.manager.ProblemDetailsController">
    <children>
-      <TextField fx:id="filterField" layoutX="117.0" layoutY="12.0" prefHeight="25.0" prefWidth="420.0" AnchorPane.leftAnchor="117.0" AnchorPane.rightAnchor="448.0" AnchorPane.topAnchor="12.0" />
+      <TextField fx:id="filterField" layoutX="117.0" layoutY="12.0" prefHeight="25.0" prefWidth="300.0" />
       <Label layoutX="14.0" layoutY="15.0" text="Фільтр таблиці:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Group AnchorPane.bottomAnchor="7.0">
-         <children>
-            <Button layoutX="14.0" layoutY="369.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="116.0" text="Нове завдання" />
-            <Button layoutX="149.0" layoutY="369.0" mnemonicParsing="false" onAction="#handleShowRequests" text="Запити у відділ кадрів" />
-            <Button layoutX="305.0" layoutY="369.0" mnemonicParsing="false" onAction="#handleShowProfile" prefHeight="25.0" prefWidth="105.0" text="Профіль автора" />
-            <Button layoutX="14.0" layoutY="408.0" mnemonicParsing="false" onAction="#handleShowTaskDetails" prefHeight="25.0" prefWidth="116.0" text="Деталі завдання" />
-            <Button layoutX="149.0" layoutY="408.0" mnemonicParsing="false" onAction="#handleShowPlane" prefHeight="25.0" prefWidth="137.0" text="Інформація про літак" />
-            <Button layoutX="305.0" layoutY="408.0" mnemonicParsing="false" onAction="#updateData" prefHeight="25.0" prefWidth="105.0" text="Оновити дані" />
-            <Button layoutX="434.0" layoutY="408.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="25.0" prefWidth="91.0" text="Вийти" />
-         </children>
-      </Group>
-      <TableView fx:id="taskTableView" layoutX="14.0" layoutY="44.0" prefHeight="316.0" prefWidth="512.0" AnchorPane.bottomAnchor="81.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="447.0" AnchorPane.topAnchor="44.0">
+      <TableView fx:id="taskTableView" layoutX="14.0" layoutY="44.0" prefHeight="337.0" prefWidth="402.0">
         <columns>
-          <TableColumn fx:id="nameTaskColumn" prefWidth="72.0" text="Завдання" />
-          <TableColumn fx:id="createDateColumn" prefWidth="79.0" text="Створено" />
-            <TableColumn fx:id="deadlineColumn" prefWidth="85.0" text="Закінчити до" />
-            <TableColumn fx:id="priorityColumn" prefWidth="69.0" text="Пріорітет" />
-            <TableColumn fx:id="amountColumn" prefWidth="65.0" text="Кількість" />
-            <TableColumn fx:id="descriptionColumn" maxWidth="141.0" prefWidth="141.0" text="Додатковий опис" />
+          <TableColumn fx:id="nameTaskColumn" prefWidth="97.0" resizable="false" text="Завдання" />
+          <TableColumn fx:id="createDateColumn" prefWidth="76.0" resizable="false" text="Створено" />
+            <TableColumn fx:id="deadlineColumn" prefWidth="84.0" resizable="false" text="Закінчити до" />
+            <TableColumn fx:id="priorityColumn" prefWidth="77.0" resizable="false" text="Пріорітет" />
+            <TableColumn fx:id="amountColumn" prefWidth="68.0" resizable="false" text="Кількість" />
         </columns>
       </TableView>
-      <Label layoutX="555.0" layoutY="15.0" text="Проект:" AnchorPane.rightAnchor="368.0" AnchorPane.topAnchor="15.0">
+      <Label layoutX="547.0" layoutY="225.0" text="Опис проекту:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="problemNameField" layoutX="615.0" layoutY="13.0" prefHeight="25.0" prefWidth="133.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="14.0" />
-      <Label layoutX="551.0" layoutY="53.0" text="Дедлайн:" AnchorPane.rightAnchor="363.0" AnchorPane.topAnchor="53.0">
+      <TextArea fx:id="problemDescriptionTextArea" layoutX="431.0" layoutY="250.0" prefHeight="131.0" prefWidth="324.0" />
+      <GridPane layoutX="424.0" layoutY="15.0" prefHeight="139.0" prefWidth="337.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="171.0" minWidth="10.0" prefWidth="81.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="264.0" minWidth="10.0" prefWidth="188.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Проект:">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="problemNameField" prefHeight="25.0" prefWidth="133.0" GridPane.columnIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Label text="Дедлайн:" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="deadlineField" prefHeight="25.0" prefWidth="133.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Label text="Створений:" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="createDateField" prefHeight="19.0" prefWidth="178.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Label text="Пріорітет:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="priorityLabel" prefHeight="20.0" prefWidth="74.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
+      <Button layoutX="14.0" layoutY="387.0" mnemonicParsing="false" onAction="#handleCreateTask" prefHeight="25.0" prefWidth="106.0" text="Нове завдання" />
+      <Button layoutX="14.0" layoutY="430.0" mnemonicParsing="false" onAction="#handleShowTaskDetails" prefHeight="25.0" prefWidth="106.0" text="Деталі завдання" />
+      <Button layoutX="146.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleShowRequests" prefHeight="25.0" prefWidth="138.0" text="Запити у відділ кадрів" />
+      <Button layoutX="147.0" layoutY="430.0" mnemonicParsing="false" onAction="#handleShowPlane" prefHeight="25.0" prefWidth="137.0" text="Інформація про літак" />
+      <Button layoutX="310.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleShowProfile" prefHeight="25.0" prefWidth="106.0" text="Профіль автора" />
+      <Button layoutX="310.0" layoutY="430.0" mnemonicParsing="false" onAction="#updateData" prefHeight="25.0" prefWidth="106.0" text="Оновити" />
+      <Button layoutX="684.0" layoutY="430.0" mnemonicParsing="false" onAction="#handleExit" prefHeight="25.0" prefWidth="71.0" text="Вийти" />
+      <ProgressBar fx:id="progressBar" layoutX="540.0" layoutY="153.0" prefHeight="30.0" prefWidth="215.0" progress="0.0" />
+      <Label layoutX="424.0" layoutY="158.0" text="Прогрес">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="752.0" layoutY="16.0" text="Створений:" AnchorPane.rightAnchor="148.0" AnchorPane.topAnchor="16.0">
+      <Label layoutX="424.0" layoutY="195.0" text="Очікуваний час закінчення:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label layoutX="697.0" layoutY="92.0" text="Опис проекту:" AnchorPane.rightAnchor="184.0">
+      <TextField fx:id="timeToFinishTextField" layoutX="606.0" layoutY="190.0" prefHeight="30.0" prefWidth="149.0">
          <font>
             <Font size="14.0" />
          </font>
-      </Label>
-      <Label layoutX="757.0" layoutY="54.0" text="Пріорітет:" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="54.0">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="createDateField" layoutX="831.0" layoutY="14.0" prefHeight="25.0" prefWidth="133.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="14.0" />
-      <TextField fx:id="deadlineField" layoutX="615.0" layoutY="51.0" prefHeight="25.0" prefWidth="133.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="51.0" />
-      <Label fx:id="priorityLabel" layoutX="831.0" layoutY="54.0" prefHeight="20.0" prefWidth="74.0" text="Priority" AnchorPane.rightAnchor="68.0" AnchorPane.topAnchor="54.0">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <TextArea fx:id="problemDescriptionTextArea" layoutX="539.0" layoutY="112.0" prefHeight="141.0" prefWidth="418.0" AnchorPane.bottomAnchor="188.0" AnchorPane.rightAnchor="16.0" AnchorPane.topAnchor="112.0" />
-      <TextArea fx:id="taskDescriptionTextArea" layoutX="539.0" layoutY="273.0" prefHeight="141.0" prefWidth="418.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="16.0" />
-      <Label layoutX="694.0" layoutY="262.0" text="Опис завдання:" AnchorPane.bottomAnchor="159.0" AnchorPane.rightAnchor="180.0">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
+      </TextField>
    </children>
 </AnchorPane>
